<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatingANatalChart"
    android:id="@+id/TitleConstr"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Title"
                android:layout_width="225dp"
                android:layout_height="71dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/whoYou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtWhoYou"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40dp" />

            <TextView
                android:id="@+id/note"
                android:layout_width="360dp"
                android:layout_height="43dp"
                android:text="@string/txtNote"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="350dp"
                android:layout_height="64dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/forzodiacdate"
                    android:ems="10"
                    android:hint="@string/txtDate"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColor="@color/darkerPurple" />

                <EditText
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/forzodiacdate"
                    android:ems="10"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:hint="@string/txtMonth"
                    android:textColor="@color/darkerPurple" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enter"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="205dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="205dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/forrectangle"
                android:text="@string/btnLearn"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imageZodiac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:visibility="invisible"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/who"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="TextView"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/aboutZodiac"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/forrectangle"
                android:text="@string/txtKnow"
                android:textColor="@color/white"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>